[project]
name = "controle-medicamentos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrefly>=0.24.2",
    "reportlab>=4.4.2",
    "streamlit>=1.47.0",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
